--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
-	"name": "arbarlow-blog",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start"
-	},
-	"dependencies": {
-		"@tailwindcss/typography": "^0.2.0",
-		"autoprefixer": "^9.8.6",
-		"gray-matter": "^4.0.2",
-		"next": "^10.0.7",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"remark": "^12.0.1",
-		"remark-html": "^13.0.1",
-		"remark-prism": "^1.1.14",
-		"tailwindcss": "^1.6.0"
-	},
-	"prettier": {
-		"arrowParens": "always",
-		"singleQuote": true,
-		"tabWidth": 2,
-		"trailingComma": "none"
-	}
+  "name": "arbarlow-blog",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^2.1.1",
+    "@next/mdx": "^12.1.6",
+    "@types/mdx": "^2.0.2",
+    "autoprefixer": "^9.8.6",
+    "next": "^12.1.6",
+    "nord-highlightjs": "^0.1.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "rehype-highlight": "^5.0.2",
+    "remark": "^12.0.1",
+    "remark-html": "^13.0.1",
+    "remark-prism": "^1.1.14",
+    "tailwindcss": "^3.0.24"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/node": "^17.0.40",
+    "@types/react": "^18.0.12",
+    "eslint": "8.17.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.7.3"
+  }
 }
